[gd_scene load_steps=9 format=3 uid="uid://bmid40mm4a14t"]

[ext_resource type="Script" path="res://test6-red-donkey/Board.gd" id="1_7ku6j"]
[ext_resource type="PackedScene" uid="uid://07mjysp80y6w" path="res://test6-red-donkey/BlockTarget.tscn" id="2_xg7po"]
[ext_resource type="Texture2D" uid="uid://dg74cp37pg8v0" path="res://test6-red-donkey/img/horizontalWall.svg" id="3_m5nr8"]
[ext_resource type="Texture2D" uid="uid://d2olhrl74ykcf" path="res://test6-red-donkey/img/lateralWall.svg" id="4_thvxw"]
[ext_resource type="Texture2D" uid="uid://citsrcr58pfaf" path="res://test6-red-donkey/img/smallHorizontalWall.svg" id="5_47uph"]
[ext_resource type="PackedScene" uid="uid://3nwjxswcxmmo" path="res://test6-red-donkey/block_1x_1.tscn" id="6_nolol"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dhcy8"]
size = Vector2(128, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jcsv5"]
size = Vector2(120, 20)

[node name="Board" type="Node2D"]
script = ExtResource("1_7ku6j")

[node name="SolidWalls" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SolidWalls"]
polygon = PackedVector2Array(112, 20, 408, 20, 408, 360, 334, 360, 334, 340, 388, 340, 388, 40, 132, 40, 132, 340, 186, 340, 186, 360, 112, 360)

[node name="LeftWall" type="Sprite2D" parent="SolidWalls"]
position = Vector2(122, 190)
texture = ExtResource("4_thvxw")

[node name="RightWall" type="Sprite2D" parent="SolidWalls"]
position = Vector2(398, 190)
texture = ExtResource("4_thvxw")

[node name="LowerLeftlWall" type="Sprite2D" parent="SolidWalls"]
position = Vector2(154, 350)
texture = ExtResource("5_47uph")

[node name="LowerRightWall" type="Sprite2D" parent="SolidWalls"]
position = Vector2(366, 350)
texture = ExtResource("5_47uph")

[node name="UpperWall" type="Sprite2D" parent="SolidWalls"]
position = Vector2(260, 30)
texture = ExtResource("3_m5nr8")

[node name="BlockTarget" parent="." instance=ExtResource("2_xg7po")]
position = Vector2(260, 104)

[node name="Exit" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2(260, 350)
shape = SubResource("RectangleShape2D_dhcy8")

[node name="GoalArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalArea"]
position = Vector2(257, 413)
shape = SubResource("RectangleShape2D_jcsv5")

[node name="Block-1x1" parent="." instance=ExtResource("6_nolol")]
position = Vector2(257, 230)
collision_mask = 3
input_pickable = true

[connection signal="is_selected" from="BlockTarget" to="." method="_on_block_is_selected"]
[connection signal="body_entered" from="GoalArea" to="." method="_on_goal_area_body_entered"]
[connection signal="is_selected" from="Block-1x1" to="." method="_on_block_is_selected"]
